--- a/todoList/todoList/Base.lproj/Main.storyboard
+++ b/todoList/todoList/Base.lproj/Main.storyboard
@@ -25,7 +25,7 @@
                                     <action selector="sortSegmentWithSender:" destination="BYZ-38-t0r" eventType="valueChanged" id="bXT-Vh-kHV"/>
                                 </connections>
                             </segmentedControl>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="k9c-7f-xNr">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="60" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="k9c-7f-xNr">
                                 <rect key="frame" x="0.0" y="171" width="414" height="722"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                             </tableView>
@@ -74,7 +74,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="MIL-fu-M0q">
-                                <rect key="frame" x="0.0" y="286" width="414" height="300"/>
+                                <rect key="frame" x="0.0" y="378" width="414" height="300"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="300" id="BEL-D6-I14"/>
                                 </constraints>
@@ -89,18 +89,48 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="qRE-rC-fRQ">
+                                <rect key="frame" x="20" y="327" width="374" height="32"/>
+                                <segments>
+                                    <segment title="👩🏻"/>
+                                    <segment title="💻"/>
+                                    <segment title="🛒"/>
+                                    <segment title="🏋🏽‍♀️"/>
+                                    <segment title="📚"/>
+                                </segments>
+                                <connections>
+                                    <action selector="labelDidChange:" destination="l9N-dh-poD" eventType="valueChanged" id="Ied-r9-wcu"/>
+                                </connections>
+                            </segmentedControl>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="b9F-WO-DPg">
+                                <rect key="frame" x="20" y="276" width="374" height="32"/>
+                                <segments>
+                                    <segment title="‼️ High"/>
+                                    <segment title="❗️ Medium"/>
+                                    <segment title="⭕️ Low"/>
+                                </segments>
+                                <connections>
+                                    <action selector="priorityDidChange:" destination="l9N-dh-poD" eventType="valueChanged" id="Qf4-44-X5K"/>
+                                </connections>
+                            </segmentedControl>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="NKb-sp-b34" firstAttribute="trailing" secondItem="6ch-BW-smC" secondAttribute="trailing" constant="20" id="0C5-mx-80i"/>
+                            <constraint firstItem="MIL-fu-M0q" firstAttribute="top" secondItem="qRE-rC-fRQ" secondAttribute="bottom" constant="20" id="4hc-LE-Sn5"/>
                             <constraint firstItem="NKb-sp-b34" firstAttribute="trailing" secondItem="ygo-zt-Lns" secondAttribute="trailing" constant="20" id="654-fe-Xbb"/>
-                            <constraint firstItem="MIL-fu-M0q" firstAttribute="top" secondItem="6ch-BW-smC" secondAttribute="bottom" constant="30" id="8jG-SG-5fV"/>
                             <constraint firstItem="6ch-BW-smC" firstAttribute="leading" secondItem="NKb-sp-b34" secondAttribute="leading" constant="20" id="9B1-Re-cmw"/>
+                            <constraint firstItem="b9F-WO-DPg" firstAttribute="leading" secondItem="NKb-sp-b34" secondAttribute="leading" constant="20" id="QEk-bR-HmV"/>
                             <constraint firstItem="MIL-fu-M0q" firstAttribute="trailing" secondItem="NKb-sp-b34" secondAttribute="trailing" id="QiR-C7-93p"/>
+                            <constraint firstItem="b9F-WO-DPg" firstAttribute="top" secondItem="6ch-BW-smC" secondAttribute="bottom" constant="20" id="Wg4-9t-Vtk"/>
+                            <constraint firstItem="qRE-rC-fRQ" firstAttribute="leading" secondItem="NKb-sp-b34" secondAttribute="leading" constant="20" id="e2d-EN-aI9"/>
                             <constraint firstItem="ygo-zt-Lns" firstAttribute="top" secondItem="NKb-sp-b34" secondAttribute="top" constant="50" id="fJc-vF-C6g"/>
                             <constraint firstItem="6ch-BW-smC" firstAttribute="top" secondItem="ygo-zt-Lns" secondAttribute="bottom" constant="10" id="gJU-Hc-zVs"/>
                             <constraint firstItem="MIL-fu-M0q" firstAttribute="leading" secondItem="NKb-sp-b34" secondAttribute="leading" id="mbO-b4-gEX"/>
                             <constraint firstItem="ygo-zt-Lns" firstAttribute="leading" secondItem="NKb-sp-b34" secondAttribute="leading" constant="20" id="o4B-Gz-3ok"/>
+                            <constraint firstItem="NKb-sp-b34" firstAttribute="trailing" secondItem="b9F-WO-DPg" secondAttribute="trailing" constant="20" id="pp8-PS-GI2"/>
+                            <constraint firstItem="NKb-sp-b34" firstAttribute="trailing" secondItem="qRE-rC-fRQ" secondAttribute="trailing" constant="20" id="q2M-7j-rRJ"/>
+                            <constraint firstItem="qRE-rC-fRQ" firstAttribute="top" secondItem="b9F-WO-DPg" secondAttribute="bottom" constant="20" id="zn9-tl-S9M"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="NKb-sp-b34"/>
                     </view>
@@ -117,6 +147,7 @@
         <!--View View Controller-->
         <scene sceneID="LH6-NR-TXt">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Iec-bU-Cky" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <viewController storyboardIdentifier="view" id="rQ0-0o-JAf" customClass="ViewViewController" customModule="todoList" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="gO0-Dq-Qe8">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
@@ -137,32 +168,41 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="⌛️ Due" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uKu-Qx-pxN">
-                                <rect key="frame" x="20" y="145" width="59.5" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="⌛️ Due" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uKu-Qx-pxN">
+                                <rect key="frame" x="20" y="145" width="374" height="21"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="✍🏽 Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mq8-29-8Ev">
-                                <rect key="frame" x="20" y="226" width="122" height="21"/>
+                                <rect key="frame" x="20" y="216.5" width="374" height="21"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="80t-zf-SF4">
-                                <rect key="frame" x="20" y="176" width="374" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="t3o-FM-HVM"/>
-                                </constraints>
+                                <rect key="frame" x="20" y="176" width="374" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="903-ya-caa">
-                                <rect key="frame" x="20" y="257" width="374" height="100"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZRY-4A-49P">
+                                <rect key="frame" x="352" y="64" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Priority" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GSW-io-r9b">
+                                <rect key="frame" x="289" y="64" width="55" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="903-ya-caa">
+                                <rect key="frame" x="20" y="247.5" width="374" height="100"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="100" id="QJ5-ZK-Iee"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="80" id="AEU-tL-5Jc"/>
                                 </constraints>
                                 <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -171,21 +211,27 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="80t-zf-SF4" firstAttribute="top" secondItem="uKu-Qx-pxN" secondAttribute="bottom" constant="10" id="1tu-HS-pOR"/>
-                            <constraint firstItem="903-ya-caa" firstAttribute="top" secondItem="mq8-29-8Ev" secondAttribute="bottom" constant="10" id="2KU-34-f49"/>
-                            <constraint firstItem="uKu-Qx-pxN" firstAttribute="top" secondItem="Zsm-ZZ-XPH" secondAttribute="bottom" constant="20" id="8F3-FB-2A5"/>
-                            <constraint firstItem="mq8-29-8Ev" firstAttribute="leading" secondItem="kKW-3a-ymh" secondAttribute="leading" constant="20" id="8WG-Mp-y0z"/>
+                            <constraint firstItem="80t-zf-SF4" firstAttribute="leading" secondItem="kKW-3a-ymh" secondAttribute="leading" constant="20" id="6i2-qB-VfO"/>
                             <constraint firstItem="kKW-3a-ymh" firstAttribute="trailing" secondItem="Zsm-ZZ-XPH" secondAttribute="trailing" constant="20" id="A7l-kU-paL"/>
-                            <constraint firstItem="kKW-3a-ymh" firstAttribute="trailing" secondItem="80t-zf-SF4" secondAttribute="trailing" constant="20" id="Ff8-DQ-EeH"/>
-                            <constraint firstItem="80t-zf-SF4" firstAttribute="leading" secondItem="kKW-3a-ymh" secondAttribute="leading" constant="20" id="Hbh-KD-uAW"/>
-                            <constraint firstItem="kKW-3a-ymh" firstAttribute="trailing" secondItem="903-ya-caa" secondAttribute="trailing" constant="20" id="NHR-TA-brK"/>
+                            <constraint firstItem="uKu-Qx-pxN" firstAttribute="top" secondItem="Zsm-ZZ-XPH" secondAttribute="bottom" constant="20" id="D2P-YP-j9H"/>
+                            <constraint firstItem="kKW-3a-ymh" firstAttribute="trailing" secondItem="903-ya-caa" secondAttribute="trailing" constant="20" id="Jr5-Vh-p24"/>
+                            <constraint firstItem="kKW-3a-ymh" firstAttribute="trailing" secondItem="ZRY-4A-49P" secondAttribute="trailing" constant="20" id="Kql-dF-9ZX"/>
+                            <constraint firstItem="kKW-3a-ymh" firstAttribute="trailing" secondItem="80t-zf-SF4" secondAttribute="trailing" constant="20" id="MHr-xP-fUk"/>
                             <constraint firstItem="NKp-hO-haw" firstAttribute="top" secondItem="kKW-3a-ymh" secondAttribute="top" constant="20" id="PH9-sw-qwg"/>
                             <constraint firstItem="NKp-hO-haw" firstAttribute="leading" secondItem="kKW-3a-ymh" secondAttribute="leading" constant="20" id="PWh-6J-qlZ"/>
-                            <constraint firstItem="903-ya-caa" firstAttribute="leading" secondItem="kKW-3a-ymh" secondAttribute="leading" constant="20" id="Qmf-ry-26T"/>
-                            <constraint firstItem="mq8-29-8Ev" firstAttribute="top" secondItem="80t-zf-SF4" secondAttribute="bottom" constant="20" id="Ux5-mA-MGN"/>
+                            <constraint firstItem="80t-zf-SF4" firstAttribute="top" secondItem="uKu-Qx-pxN" secondAttribute="bottom" constant="10" id="PrP-gc-Ri9"/>
+                            <constraint firstItem="ZRY-4A-49P" firstAttribute="leading" secondItem="GSW-io-r9b" secondAttribute="trailing" constant="8" id="Qd7-Gn-2t3"/>
+                            <constraint firstItem="GSW-io-r9b" firstAttribute="top" secondItem="kKW-3a-ymh" secondAttribute="top" constant="20" id="Tof-N2-S9W"/>
+                            <constraint firstItem="ZRY-4A-49P" firstAttribute="top" secondItem="kKW-3a-ymh" secondAttribute="top" constant="20" id="VvZ-3Z-pZi"/>
+                            <constraint firstItem="903-ya-caa" firstAttribute="top" secondItem="mq8-29-8Ev" secondAttribute="bottom" constant="10" id="ZM3-Tx-lIB"/>
                             <constraint firstItem="Zsm-ZZ-XPH" firstAttribute="top" secondItem="NKp-hO-haw" secondAttribute="bottom" constant="10" id="arj-41-LAY"/>
-                            <constraint firstItem="uKu-Qx-pxN" firstAttribute="leading" secondItem="kKW-3a-ymh" secondAttribute="leading" constant="20" id="hf3-yz-uLR"/>
+                            <constraint firstItem="Zsm-ZZ-XPH" firstAttribute="top" secondItem="ZRY-4A-49P" secondAttribute="bottom" constant="10" id="dOJ-S9-DA7"/>
+                            <constraint firstItem="mq8-29-8Ev" firstAttribute="leading" secondItem="kKW-3a-ymh" secondAttribute="leading" constant="20" id="dbT-TC-BeC"/>
+                            <constraint firstItem="903-ya-caa" firstAttribute="leading" secondItem="kKW-3a-ymh" secondAttribute="leading" constant="20" id="hUl-iY-LVz"/>
+                            <constraint firstItem="Zsm-ZZ-XPH" firstAttribute="top" secondItem="GSW-io-r9b" secondAttribute="bottom" constant="10" id="myz-Zg-AQ2"/>
                             <constraint firstItem="Zsm-ZZ-XPH" firstAttribute="leading" secondItem="kKW-3a-ymh" secondAttribute="leading" constant="20" id="z8Q-vi-fHH"/>
+                            <constraint firstItem="mq8-29-8Ev" firstAttribute="top" secondItem="80t-zf-SF4" secondAttribute="bottom" constant="20" id="zS9-O8-cC5"/>
+                            <constraint firstItem="kKW-3a-ymh" firstAttribute="trailing" secondItem="mq8-29-8Ev" secondAttribute="trailing" constant="20" id="zuz-Kc-Xn3"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="kKW-3a-ymh"/>
                     </view>
@@ -195,7 +241,6 @@
                         <outlet property="itemLabel" destination="Zsm-ZZ-XPH" id="qjJ-ek-0au"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Iec-bU-Cky" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2941" y="118"/>
         </scene>
